--- a/20250110-Buzzer/Objects/Buzzer.build_log.htm
+++ b/20250110-Buzzer/Objects/Buzzer.build_log.htm
@@ -3,8 +3,8 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.38.0.0
-Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
+IDE-Version: µVision V5.24.2.0
+Copyright (C) 2017 ARM Ltd and ARM Germany GmbH. All rights reserved.
 License Information: tyler hong, University Of Waterloo, LIC=CZVNB-21NG9-5GB7V-PB367-3GT9P-QC7Z6
  
 Tool Versions:
@@ -18,17 +18,17 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
-D:\TylerHong\Development\Learn\Learning-8051-embedded-system\20241021-Waterfall-built-in-library\built-in-library.uvproj
-Project File Date:  10/21/2024
+D:\TylerHong\Development\Learn\Learning-8051-embedded-system\20250110-Buzzer\Buzzer.uvproj
+Project File Date:  01/10/2025
 
 <h2>Output:</h2>
 Build target 'Target 1'
-compiling main.c...
+compiling buzzer.c...
 linking...
-Program Size: data=9.0 xdata=0 code=80
-creating hex file from ".\Objects\built-in-library"...
-".\Objects\built-in-library" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:01
+Program Size: data=9.0 xdata=0 code=67
+creating hex file from ".\Objects\Buzzer"...
+".\Objects\Buzzer" - 0 Error(s), 0 Warning(s).
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
