--- a/20250125-Number-LED-Matrix/Objects/Number-LED-MAtrix.build_log.htm
+++ b/20250125-Number-LED-Matrix/Objects/Number-LED-MAtrix.build_log.htm
@@ -18,15 +18,16 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
-d:\TylerHong\Development\Learn\Learning-8051-embedded-system\20250125-SingleLED-LED-Matrix\SingleLED-LED-Matrix.uvproj
+D:\TylerHong\Development\Learn\Learning-8051-embedded-system\20250125-Number-LED-Matrix\Number-LED-MAtrix.uvproj
 Project File Date:  01/25/2025
 
 <h2>Output:</h2>
 Build target 'Target 1'
+compiling light_up_numbers_LED_mateix.c...
 linking...
-Program Size: data=9.0 xdata=0 code=94
-creating hex file from ".\Objects\SingleLED-LED-Matrix"...
-".\Objects\SingleLED-LED-Matrix" - 0 Error(s), 0 Warning(s).
+Program Size: data=25.0 xdata=0 code=262
+creating hex file from ".\Objects\Number-LED-MAtrix"...
+".\Objects\Number-LED-MAtrix" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
